// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateDtsContentWithSourceMap change export type by namedExport 2`] = `
{
  "version": 3,
  "sources": ["1.css"],
  "names": ["foo", "bar"],
  "mappings": "AAAA;AAAA,E,SAAAA,K,SAAA;AAAA,E,SACAC,K,SADA;AAAA;AAAA",
  "file": "1.css.d.ts",
  "sourceRoot": ""
}
`;

exports[`generateDtsContentWithSourceMap change export type by namedExport 4`] = `
{
  "version": 3,
  "sources": ["1.css"],
  "names": ["foo", "bar"],
  "mappings": "AAAA;aAAAA,G,SAAA;aACAC,G,SADA",
  "file": "1.css.d.ts",
  "sourceRoot": ""
}
`;

exports[`generateDtsContentWithSourceMap emit other directory 2`] = `
{
  "version": 3,
  "sources": ["../src/1.css"],
  "names": ["foo", "bar"],
  "mappings": "AAAA;AAAA,E,SAAAA,K,SAAA;AAAA,E,SACAC,K,SADA;AAAA;AAAA",
  "file": "1.css.d.ts",
  "sourceRoot": ""
}
`;

exports[`generateDtsContentWithSourceMap format case camelCase 1`] = `
"declare const styles: {
  readonly \\"foo-bar\\": string;
  readonly \\"fooBar\\": string;
  readonly \\"foo_bar\\": string;
  readonly \\"fooBar\\": string;
};
export = styles;
"
`;

exports[`generateDtsContentWithSourceMap format case camelCaseOnly 1`] = `
"declare const styles: {
  readonly \\"fooBar\\": string;
  readonly \\"fooBar\\": string;
};
export = styles;
"
`;

exports[`generateDtsContentWithSourceMap format case dashes 1`] = `
"declare const styles: {
  readonly \\"foo-bar\\": string;
  readonly \\"fooBar\\": string;
  readonly \\"foo_bar\\": string;
  readonly \\"foo_bar\\": string;
};
export = styles;
"
`;

exports[`generateDtsContentWithSourceMap format case dashesOnly 1`] = `
"declare const styles: {
  readonly \\"fooBar\\": string;
  readonly \\"foo_bar\\": string;
};
export = styles;
"
`;

exports[`generateDtsContentWithSourceMap format case undefined 1`] = `
"declare const styles: {
  readonly \\"foo-bar\\": string;
  readonly \\"foo_bar\\": string;
};
export = styles;
"
`;

exports[`generateDtsContentWithSourceMap generate dts content with source map 1`] = `
"declare const styles: {
  readonly \\"foo\\": string;
  readonly \\"bar\\": string;
  readonly \\"baz\\": string;
  readonly \\"baz\\": string;
  readonly \\"qux\\": string;
  readonly \\"quux\\": string;
  readonly \\"quux\\": string;
};
export = styles;
"
`;

exports[`generateDtsContentWithSourceMap generate dts content with source map 2`] = `
{
  "version": 3,
  "sources": ["1.css", "2.css"],
  "names": ["foo", "bar", "baz", "qux", "quux"],
  "mappings": "AAAA;AAAA,E,SAAAA,K,SAAA;AAAA,E,SACAC,K,SADA;AAAA,E,SAEAC,K,SAFA;AAAA,E,SAGAA,K,SAHA;AAAA,E,SCIAC,K,SDJA;AAAA,E,SCKAC,M,SDLA;AAAA,E,SCMAA,M,SDNA;AAAA;AAAA",
  "file": "1.css.d.ts",
  "sourceRoot": ""
}
`;
